# CURSOR-AI

./: .cursorrules  .env.example  .gitignore  COMANDOS.md  README.md  main.py  notas.md  pyproject.toml  requirements.txt  schemas.py  settings.py  start-api.bat  test_lyrics.txt  yesterday_lyrics.txt
.cursor/rules/: functions.mdc
src/: main.py
src/core/interfaces/: lyrics_provider.py
src/modules/lyrics/api/: routes.py
src/modules/lyrics/infrastructure/: genius_provider.py  local_db_provider.py
src/modules/lyrics/services/: file_service.py  lyrics_service.py
tests/: conftest.py  test_lyrics_subtitles.py
